--- a/config/database.yml
+++ b/config/database.yml
@@ -21,8 +21,20 @@ default: &default
   url: <%= ENV["DATABASE_URL"] %>
 
 development:
-  <<: *default
-  database: blog_development
+  primary: &primary_development
+    <<: *default
+    database: blog_development
+
+  # Optional separate connections that default to the same database in development
+  cache:
+    <<: *primary_development
+    migrations_paths: db/cache_migrate
+  queue:
+    <<: *primary_development
+    migrations_paths: db/queue_migrate
+  cable:
+    <<: *primary_development
+    migrations_paths: db/cable_migrate
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
