--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -9,7 +9,15 @@
 #     priority: 2
 #     schedule: at 5am every day
 
+development:
+  publish_posts:
+    class: PublishPostsJob
+    schedule: every day at 12am
+
 production:
   clear_solid_queue_finished_jobs:
     command: "SolidQueue::Job.clear_finished_in_batches(sleep_between_batches: 0.3)"
     schedule: every hour at minute 12
+  publish_posts:
+    class: PublishPostsJob
+    schedule: every day at 12am
