Add separate database configurations for cache, queue, and cable in development environment

--- a/config/database.yml
+++ b/config/database.yml
@@ -24,16 +24,17 @@ development:
   primary: &primary_development
     <<: *default
     database: instablog_development
-
-  # Optional separate connections that default to the same database in development
   cache:
     <<: *primary_development
+    database: instablog_development_cache
     migrations_paths: db/cache_migrate
   queue:
     <<: *primary_development
+    database: instablog_development_queue
     migrations_paths: db/queue_migrate
   cable:
     <<: *primary_development
+    database: instablog_development_cable
     migrations_paths: db/cable_migrate
 
   # The specified database role being used to connect to PostgreSQL.
