--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -11,6 +11,7 @@
 
 publish_posts:
   class: PublishPostsJob
+  description: "Publish scheduled draft posts"
   schedule: every day at 12am
 
 production:
